Add more Blueprints
to replace Assets and be able, to pick them up!

--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1129,26 +1129,26 @@ bShowGrid=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Internal-External/Box_Pascal/Box_low
-MRUItem1=/Game/Assets/Internal-External/Box_Pascal/M_Box-Material
-MRUItem2=/Game/Scenes/Gate_2_Levels/Jahis_Cave
-MRUItem3=/Game/Blueprints/Items/BP_Litfasssaeule
-MRUItem4=/Game/Blueprints/Items/BP_ItemParent
-MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem6=/Game/Scenes/Gate_2_Levels/MainMenuLevel
-MRUItem7=/Game/Scenes/Gate_2_Levels/Credits
-MRUItem8=/Game/Scenes/Gate_2_Levels/MainMenu
-MRUItem9=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
-MRUItem10=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3
-MRUItem11=/Game/Sounds/Irgendwas
-MRUItem12=/Game/Sounds/Apprehension_Loop_15Min
-MRUItem13=/Game/Blueprints/Transition/Transition
-MRUItem14=/Game/Blueprints/Items/BP_NewAsset
-MRUItem15=/Game/UI/HeadsUpDisplay
-MRUItem16=/Game/Blueprints/Items/BP_Babypergament
-MRUItem17=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal
-MRUItem18=/Game/Assets/Internal-External/Pedestal_Pascal/Material
-MRUItem19=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal_Material_OcclusionRoughnessMetallic
+MRUItem0=/Game/Blueprints/Items/BP_Chair
+MRUItem1=/Game/Blueprints/Items/BP_Skull01
+MRUItem2=/Game/Blueprints/Items/BP_Skull02
+MRUItem3=/Game/Blueprints/Items/BP_AbsinthBottle
+MRUItem4=/Game/Blueprints/Items/BP_Horns
+MRUItem5=/Game/Blueprints/Items/BP_Booklow
+MRUItem6=/Game/Blueprints/Items/BP_Box
+MRUItem7=/Game/Blueprints/Items/BP_Dagger
+MRUItem8=/Game/Blueprints/Items/BP_Babypergament2
+MRUItem9=/Game/Blueprints/Items/BP_Stork
+MRUItem10=/Game/Assets/Internal-External/Box_Pascal/Box_low
+MRUItem11=/Game/Assets/Internal-External/Box_Pascal/M_Box-Material
+MRUItem12=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem13=/Game/Blueprints/Items/BP_Litfasssaeule
+MRUItem14=/Game/Blueprints/Items/BP_ItemParent
+MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem16=/Game/Scenes/Gate_2_Levels/MainMenuLevel
+MRUItem17=/Game/Scenes/Gate_2_Levels/Credits
+MRUItem18=/Game/Scenes/Gate_2_Levels/MainMenu
+MRUItem19=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1724,6 +1724,86 @@ Emitter.Cooking=True
 Emitter.Emitter=True
 Emitter.Replication=True
 Emitter.Actor=True
+BP_Stork_C.Tick=True
+BP_Stork_C.Default=True
+BP_Stork_C.Replication=True
+BP_Stork_C.Rendering=True
+BP_Stork_C.Collision=True
+BP_Stork_C.Actor=True
+BP_Stork_C.Input=True
+BP_Stork_C.TransformCommon=True
+BP_Babypergament2_C.Tick=True
+BP_Babypergament2_C.Default=True
+BP_Babypergament2_C.Replication=True
+BP_Babypergament2_C.Rendering=True
+BP_Babypergament2_C.Collision=True
+BP_Babypergament2_C.Actor=True
+BP_Babypergament2_C.Input=True
+BP_Babypergament2_C.TransformCommon=True
+BP_Dagger_C.Tick=True
+BP_Dagger_C.Default=True
+BP_Dagger_C.Replication=True
+BP_Dagger_C.Rendering=True
+BP_Dagger_C.Collision=True
+BP_Dagger_C.Actor=True
+BP_Dagger_C.Input=True
+BP_Dagger_C.TransformCommon=True
+BP_Box_C.Tick=True
+BP_Box_C.Default=True
+BP_Box_C.Replication=True
+BP_Box_C.Rendering=True
+BP_Box_C.Collision=True
+BP_Box_C.Actor=True
+BP_Box_C.Input=True
+BP_Box_C.TransformCommon=True
+BP_Booklow_C.Tick=True
+BP_Booklow_C.Default=True
+BP_Booklow_C.Replication=True
+BP_Booklow_C.Rendering=True
+BP_Booklow_C.Collision=True
+BP_Booklow_C.Actor=True
+BP_Booklow_C.Input=True
+BP_Booklow_C.TransformCommon=True
+BP_Horns_C.Tick=True
+BP_Horns_C.Default=True
+BP_Horns_C.Replication=True
+BP_Horns_C.Rendering=True
+BP_Horns_C.Collision=True
+BP_Horns_C.Actor=True
+BP_Horns_C.Input=True
+BP_Horns_C.TransformCommon=True
+BP_AbsinthBottle_C.Tick=True
+BP_AbsinthBottle_C.Default=True
+BP_AbsinthBottle_C.Replication=True
+BP_AbsinthBottle_C.Rendering=True
+BP_AbsinthBottle_C.Collision=True
+BP_AbsinthBottle_C.Actor=True
+BP_AbsinthBottle_C.Input=True
+BP_AbsinthBottle_C.TransformCommon=True
+BP_Chair_C.Tick=True
+BP_Chair_C.Default=True
+BP_Chair_C.Replication=True
+BP_Chair_C.Rendering=True
+BP_Chair_C.Collision=True
+BP_Chair_C.Actor=True
+BP_Chair_C.Input=True
+BP_Chair_C.TransformCommon=True
+BP_Skull02_C.Tick=True
+BP_Skull02_C.Default=True
+BP_Skull01_C.Tick=True
+BP_Skull01_C.Default=True
+BP_Skull01_C.Replication=True
+BP_Skull01_C.Rendering=True
+BP_Skull01_C.Collision=True
+BP_Skull01_C.Actor=True
+BP_Skull01_C.Input=True
+BP_Litfass_C.TransformCommon=True
+BP_Litfass_C.Rendering=True
+BP_Litfass_C.Replication=True
+BP_Litfass_C.Collision=True
+BP_Litfass_C.Input=True
+BP_Litfass_C.Actor=True
+BP_Skull01_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Internal-External/Chains/SM_Chain_low.SM_Chain_low=1
@@ -1804,6 +1884,16 @@ Emitter.Actor=True
 /Game/Blueprints/Items/BP_Litfasssaeule.BP_Litfasssaeule=1
 /Game/Assets/Internal-External/Box_Pascal/M_Box-Material.M_Box-Material=1
 /Game/Assets/Internal-External/Box_Pascal/Box_low.Box_low=1
+/Game/Blueprints/Items/BP_Stork.BP_Stork=1
+/Game/Blueprints/Items/BP_Babypergament2.BP_Babypergament2=1
+/Game/Blueprints/Items/BP_Dagger.BP_Dagger=1
+/Game/Blueprints/Items/BP_Box.BP_Box=1
+/Game/Blueprints/Items/BP_Booklow.BP_Booklow=1
+/Game/Blueprints/Items/BP_Horns.BP_Horns=1
+/Game/Blueprints/Items/BP_AbsinthBottle.BP_AbsinthBottle=1
+/Game/Blueprints/Items/BP_Chair.BP_Chair=1
+/Game/Blueprints/Items/BP_Skull02.BP_Skull02=1
+/Game/Blueprints/Items/BP_Skull01.BP_Skull01=1
 
 [MaterialEditor]
 PrimType=1
@@ -1983,6 +2073,17 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Items/BP_Skull01.BP_Skull01;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Litfass.BP_Litfass;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Skull02.BP_Skull02;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Chair.BP_Chair;
+RecentlyPlaced=/Game/Blueprints/Items/BP_AbsinthBottle.BP_AbsinthBottle;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Horns.BP_Horns;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Booklow.BP_Booklow;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Box.BP_Box;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Dagger.BP_Dagger;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Babypergament2.BP_Babypergament2;
+RecentlyPlaced=/Game/Blueprints/Items/BP_Stork.BP_Stork;
 RecentlyPlaced=/Game/Assets/Internal-External/Wall_Pergament_Domi/pergament.pergament;
 RecentlyPlaced=/Game/Assets/Internal-External/Bottle/SM_MERGED_Bottle_low.SM_MERGED_Bottle_low;/Engine/Transient.ActorFactoryStaticMesh_0
 RecentlyPlaced=/Game/Assets/Internal-External/Horns/SM_MERGED_SM_Horns_with_Chain.SM_MERGED_SM_Horns_with_Chain;
@@ -1992,17 +2093,6 @@ RecentlyPlaced=/Game/Assets/Internal-External/Chair/Chair_01_low.Chair_01_low;
 RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/Painting_Zombie/PaintingZombieOileffectJan_Textured_NEW.PaintingZombieOileffectJan_Textured_NEW;
 RecentlyPlaced=/Game/Assets/Internal-External/Ctulhu_Poster/SM_Ctulhu_All.SM_Ctulhu_All;
 RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/PergamentStorkEmily/PergamentStorkEmilyJan_Textured.PergamentStorkEmilyJan_Textured;
-RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/PosterStPatricksDayJan/PosterStPatricksDayJan_Textured.PosterStPatricksDayJan_Textured;
-RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/Painting_Monster/PaintingBreedOileffectJan_Textured_NEW.PaintingBreedOileffectJan_Textured_NEW;
-RecentlyPlaced=/Game/Assets/Internal-External/Bilderrahmen_Jan/Painting_Froggy/PaintingMutantOileffectJan_Textured_NEW.PaintingMutantOileffectJan_Textured_NEW;
-RecentlyPlaced=/Game/Blueprints/Items/BP_NewAsset.BP_NewAsset;
-RecentlyPlaced=/Game/Blueprints/Items/BP_ItemParent.BP_ItemParent;/Engine/Transient.ActorFactoryBlueprint_0
-RecentlyPlaced=/Game/Assets/Internal-External/Pedestal_Pascal/Pedestal.Pedestal;
-RecentlyPlaced=/Game/Assets/Internal-External/Kronleuchter_Julian/kronleuchter.kronleuchter;
-RecentlyPlaced=/Game/Assets/Internal-External/Dark_Fairy_Pergament/Paper.Paper;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/Assets/Internal-External/Portal_Julian/tor.tor;
-RecentlyPlaced=/Game/Assets/Internal-External/Portal_Julian/portalwand.portalwand;
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
