--- a/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/JahisCave_New/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1129,26 +1129,26 @@ bShowGrid=False
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Items/BP_Chair
-MRUItem1=/Game/Blueprints/Items/BP_Skull01
-MRUItem2=/Game/Blueprints/Items/BP_Skull02
-MRUItem3=/Game/Blueprints/Items/BP_AbsinthBottle
-MRUItem4=/Game/Blueprints/Items/BP_Horns
-MRUItem5=/Game/Blueprints/Items/BP_Booklow
-MRUItem6=/Game/Blueprints/Items/BP_Box
-MRUItem7=/Game/Blueprints/Items/BP_Dagger
-MRUItem8=/Game/Blueprints/Items/BP_Babypergament2
-MRUItem9=/Game/Blueprints/Items/BP_Stork
-MRUItem10=/Game/Assets/Internal-External/Box_Pascal/Box_low
-MRUItem11=/Game/Assets/Internal-External/Box_Pascal/M_Box-Material
-MRUItem12=/Game/Scenes/Gate_2_Levels/Jahis_Cave
-MRUItem13=/Game/Blueprints/Items/BP_Litfasssaeule
-MRUItem14=/Game/Blueprints/Items/BP_ItemParent
-MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem16=/Game/Scenes/Gate_2_Levels/MainMenuLevel
-MRUItem17=/Game/Scenes/Gate_2_Levels/Credits
-MRUItem18=/Game/Scenes/Gate_2_Levels/MainMenu
-MRUItem19=/Game/Sounds/Apprehension_Loop_15MinWAV_16bit-3_Cue
+MRUItem0=/Game/Blueprints/Items/BP_AbsinthBottle
+MRUItem1=/Game/Blueprints/Items/BP_Horns
+MRUItem2=/Game/Blueprints/Items/BP_Box
+MRUItem3=/Game/Blueprints/Items/BP_Dagger
+MRUItem4=/Game/Blueprints/Items/BP_Booklow
+MRUItem5=/Game/Blueprints/Items/BP_Hochhaus
+MRUItem6=/Game/Blueprints/Items/BP_Skull01
+MRUItem7=/Game/Blueprints/Items/BP_Skull02
+MRUItem8=/Game/UI/InspectionScreen
+MRUItem9=/Game/Assets/Internal-External/Skulls_Jan/Skull_01/Skull01_Schaedel_low
+MRUItem10=/Game/Blueprints/Items/BP_Chair
+MRUItem11=/Game/Blueprints/Items/BP_Babypergament2
+MRUItem12=/Game/Blueprints/Items/BP_Stork
+MRUItem13=/Game/Assets/Internal-External/Box_Pascal/Box_low
+MRUItem14=/Game/Assets/Internal-External/Box_Pascal/M_Box-Material
+MRUItem15=/Game/Scenes/Gate_2_Levels/Jahis_Cave
+MRUItem16=/Game/Blueprints/Items/BP_Litfasssaeule
+MRUItem17=/Game/Blueprints/Items/BP_ItemParent
+MRUItem18=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem19=/Game/Scenes/Gate_2_Levels/MainMenuLevel
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1804,6 +1804,26 @@ BP_Litfass_C.Collision=True
 BP_Litfass_C.Input=True
 BP_Litfass_C.Actor=True
 BP_Skull01_C.TransformCommon=True
+Actor.TransformCommon=True
+Actor.Actor=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+BP_Hochhaus_C.Tick=True
+BP_Hochhaus_C.Default=True
+BP_Hochhaus_C.Replication=True
+BP_Hochhaus_C.Rendering=True
+BP_Hochhaus_C.Collision=True
+BP_Hochhaus_C.Actor=True
+BP_Hochhaus_C.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Internal-External/Chains/SM_Chain_low.SM_Chain_low=1
@@ -1894,6 +1914,9 @@ BP_Skull01_C.TransformCommon=True
 /Game/Blueprints/Items/BP_Chair.BP_Chair=1
 /Game/Blueprints/Items/BP_Skull02.BP_Skull02=1
 /Game/Blueprints/Items/BP_Skull01.BP_Skull01=1
+/Game/Assets/Internal-External/Skulls_Jan/Skull_01/Skull01_Schaedel_low.Skull01_Schaedel_low=1
+/Game/UI/InspectionScreen.InspectionScreen=1
+/Game/Blueprints/Items/BP_Hochhaus.BP_Hochhaus=1
 
 [MaterialEditor]
 PrimType=1
