--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.uasset filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.pak filter=lfs diff=lfs merge=lfs -text
+*.pdb filter=lfs diff=lfs merge=lfs -text
